src/y.output
Terminals unused in grammar

   L_INLINE_FUN


Grammar

    0 $accept: all $end

    1 all: program

    2 program: program def possible_semi_colon
    3        | %empty

    4 possible_semi_colon: %empty
    5                    | ';'

    6 note_start: %empty

    7 $@1: %empty

    8 $@2: %empty

    9 def: type L_IDENTIFIER $@1 '(' argument ')' $@2 function_body
   10    | name_list ';'
   11    | struct_decl
   12    | inheritance
   13    | default_visibility

   14 @3: %empty

   15 function_body: @3 block
   16              | ';'

   17 $@4: %empty

   18 $@5: %empty

   19 $@6: %empty

   20 inline_func: L_FUNC inline_opt_type $@4 inline_opt_args $@5 inline_opt_context $@6 block

   21 $@7: %empty

   22 inline_func: L_BEGIN_INLINE $@7 statements inline_comma_expr L_END_INLINE

   23 inline_opt_args: %empty
   24                | '(' argument ')'

   25 inline_opt_type: %empty
   26                | basic_type

   27 inline_opt_context: %empty
   28                   | ':' inline_context_list inline_semi

   29 inline_semi: %empty
   30            | ';'

   31 inline_context_list: %empty
   32                    | context_decl
   33                    | inline_context_list ';' context_decl

   34 context_decl: local_name_list

   35 inline_comma_expr: %empty
   36                  | comma_expr

   37 struct_decl: type_modifier_list L_STRUCT L_IDENTIFIER ';'

   38 $@8: %empty

   39 struct_decl: type_modifier_list L_STRUCT L_IDENTIFIER $@8 opt_base_struct '{' opt_member_list '}' ';'

   40 opt_base_struct: %empty
   41                | '(' L_IDENTIFIER ')'

   42 opt_member_list: %empty
   43                | member_list

   44 member_list: member
   45            | member_list member

   46 member: member_name_list ';'

   47 member_name_list: basic_non_void_type L_IDENTIFIER
   48                 | member_name_list ',' optional_stars L_IDENTIFIER

   49 inheritance: inheritance_qualifiers L_INHERIT string_constant ';'

   50 inheritance_qualifiers: inheritance_modifier_list
   51                       | inheritance_qualifier inheritance_qualifiers

   52 inheritance_modifier: L_VIRTUAL

   53 inheritance_modifier_list: type_modifier_list
   54                          | inheritance_modifier_list inheritance_modifier type_modifier_list

   55 inheritance_qualifier: type L_IDENTIFIER

   56 default_visibility: L_DEFAULT inheritance_qualifiers ';'

   57 optional_stars: %empty
   58               | optional_stars '*'

   59 type: type_modifier_list opt_basic_type

   60 non_void_type: type_modifier_list opt_basic_non_void_type

   61 type_modifier_list: %empty
   62                   | type_modifier_list type_modifier

   63 type_modifier: L_NO_MASK
   64              | L_STATIC
   65              | L_PRIVATE
   66              | L_PUBLIC
   67              | L_VARARGS
   68              | L_PROTECTED
   69              | L_NOSAVE
   70              | L_DEPRECATED
   71              | L_VISIBLE

   72 opt_basic_type: basic_type
   73               | %empty

   74 opt_basic_non_void_type: basic_non_void_type
   75                        | %empty

   76 basic_non_void_type: single_basic_non_void_type
   77                    | basic_non_void_type '|' single_basic_non_void_type

   78 single_basic_non_void_type: L_STATUS
   79                           | L_INT
   80                           | L_STRING_DECL
   81                           | L_OBJECT
   82                           | L_CLOSURE_DECL
   83                           | L_SYMBOL_DECL
   84                           | L_FLOAT_DECL
   85                           | L_MAPPING
   86                           | L_MIXED
   87                           | L_STRUCT identifier
   88                           | single_basic_non_void_type '*'
   89                           | '<' basic_non_void_type '>'

   90 basic_type: basic_non_void_type
   91           | L_VOID

   92 cast: '(' single_basic_non_void_type ')'

   93 decl_cast: '(' '{' basic_type '}' ')'

   94 identifier: L_IDENTIFIER
   95           | L_LOCAL

   96 argument: %empty
   97         | L_VOID
   98         | argument_list

   99 argument_list: new_arg_name
  100              | argument_list ',' new_arg_name

  101 new_arg_name: non_void_type L_IDENTIFIER
  102             | non_void_type L_LOCAL

  103 name_list: type L_IDENTIFIER

  104 @9: %empty

  105 name_list: type L_IDENTIFIER @9 L_ASSIGN expr0
  106          | name_list ',' optional_stars L_IDENTIFIER

  107 @10: %empty

  108 name_list: name_list ',' optional_stars L_IDENTIFIER @10 L_ASSIGN expr0

  109 block: '{' statements_block '}'

  110 $@11: %empty

  111 statements_block: $@11 statements

  112 statements: %empty
  113           | statements local_name_list ';'
  114           | statements statement

  115 local_name_list: basic_type L_IDENTIFIER
  116                | basic_type L_LOCAL

  117 @12: %empty

  118 local_name_list: basic_type L_IDENTIFIER @12 L_ASSIGN expr0

  119 @13: %empty

  120 local_name_list: basic_type L_LOCAL @13 L_ASSIGN expr0
  121                | local_name_list ',' optional_stars L_IDENTIFIER
  122                | local_name_list ',' optional_stars L_LOCAL

  123 @14: %empty

  124 local_name_list: local_name_list ',' optional_stars L_IDENTIFIER @14 L_ASSIGN expr0

  125 @15: %empty

  126 local_name_list: local_name_list ',' optional_stars L_LOCAL @15 L_ASSIGN expr0

  127 statement: comma_expr ';'
  128          | error ';'
  129          | cond
  130          | while
  131          | do
  132          | for
  133          | foreach
  134          | switch
  135          | return ';'
  136          | block
  137          | ';'
  138          | L_BREAK ';'
  139          | L_CONTINUE ';'

  140 return: L_RETURN
  141       | L_RETURN comma_expr

  142 @16: %empty

  143 @17: %empty

  144 while: @16 L_WHILE '(' comma_expr ')' @17 statement

  145 @18: %empty

  146 $@19: %empty

  147 do: @18 L_DO statement L_WHILE $@19 '(' comma_expr ')' ';'

  148 @20: %empty

  149 @21: %empty

  150 @22: %empty

  151 @23: %empty

  152 for: L_FOR '(' @20 for_init_expr ';' @21 for_expr ';' @22 for_expr ')' @23 statement

  153 for_init_expr: %empty
  154              | comma_expr_decl

  155 comma_expr_decl: expr_decl

  156 $@24: %empty

  157 comma_expr_decl: comma_expr_decl $@24 ',' expr_decl

  158 expr_decl: expr0
  159          | local_name_lvalue L_ASSIGN expr0
  160          | local_name_lvalue

  161 for_expr: %empty
  162         | comma_expr

  163 @25: %empty

  164 @26: %empty

  165 $@27: %empty

  166 foreach: L_FOREACH '(' @25 foreach_vars foreach_in @26 foreach_expr ')' $@27 statement

  167 foreach_vars: foreach_var_decl
  168             | foreach_vars ',' foreach_var_decl

  169 foreach_var_decl: foreach_var_lvalue

  170 foreach_var_lvalue: local_name_lvalue
  171                   | name_var_lvalue

  172 foreach_in: identifier
  173           | ':'

  174 foreach_expr: expr0
  175             | expr0 L_RANGE expr0

  176 $@28: %empty

  177 switch: L_SWITCH '(' comma_expr ')' $@28 '{' switch_block '}'

  178 switch_block: switch_block switch_statements
  179             | switch_statements

  180 switch_statements: switch_label statements_block

  181 switch_label: case
  182             | default

  183 case: L_CASE case_label ':'
  184     | L_CASE case_label L_RANGE case_label ':'

  185 case_label: constant
  186           | string_constant

  187 default: L_DEFAULT ':'

  188 condStart: L_IF '(' comma_expr ')'

  189 cond: condStart statement optional_else

  190 optional_else: %empty

  191 @29: %empty

  192 optional_else: L_ELSE @29 statement

  193 constant: constant '|' constant
  194         | constant '^' constant
  195         | constant '&' constant
  196         | constant L_EQ constant
  197         | constant L_NE constant
  198         | constant '>' constant
  199         | constant L_GE constant
  200         | constant '<' constant
  201         | constant L_LE constant
  202         | constant L_LSH constant
  203         | constant L_RSH constant
  204         | constant L_RSHL constant
  205         | constant '+' constant
  206         | constant '-' constant
  207         | constant '*' constant
  208         | constant '%' constant
  209         | constant '/' constant
  210         | '(' constant ')'
  211         | '-' constant
  212         | L_NOT constant
  213         | '~' constant
  214         | L_NUMBER

  215 string_constant: L_STRING
  216                | string_constant '+' L_STRING
  217                | L_STRING L_STRING
  218                | string_constant '+' L_STRING L_STRING
  219                | '(' string_constant ')'

  220 comma_expr: expr0

  221 $@30: %empty

  222 comma_expr: comma_expr $@30 ',' expr0

  223 @31: %empty

  224 expr0: lvalue L_ASSIGN @31 expr0
  225      | error L_ASSIGN expr0

  226 @32: %empty

  227 @33: %empty

  228 expr0: expr0 '?' @32 expr0 @33 ':' expr0

  229 @34: %empty

  230 expr0: expr0 L_LOR @34 expr0

  231 @35: %empty

  232 expr0: expr0 L_LAND @35 expr0
  233      | expr0 '|' expr0
  234      | expr0 '^' expr0
  235      | expr0 '&' expr0
  236      | expr0 L_EQ expr0
  237      | expr0 L_NE expr0
  238      | expr0 '>' expr0
  239      | expr0 L_GE expr0
  240      | expr0 '<' expr0
  241      | expr0 L_LE expr0
  242      | expr0 L_LSH expr0
  243      | expr0 L_RSH expr0
  244      | expr0 L_RSHL expr0

  245 @36: %empty

  246 expr0: expr0 '+' @36 expr0
  247      | expr0 '-' expr0
  248      | expr0 '*' expr0
  249      | expr0 '%' expr0
  250      | expr0 '/' expr0
  251      | decl_cast expr0
  252      | cast expr0
  253      | pre_inc_dec lvalue
  254      | L_NOT expr0
  255      | '~' expr0
  256      | '-' expr0
  257      | lvalue L_INC
  258      | lvalue L_DEC
  259      | lvalue_reference
  260      | lvalue_reference L_ASSIGN expr0
  261      | expr4

  262 lvalue_reference: '&' name_lvalue
  263                 | '&' '(' lvalue ')'
  264                 | '&' '(' function_call ')'

  265 pre_inc_dec: L_INC
  266            | L_DEC

  267 expr4: function_call
  268      | inline_func
  269      | catch
  270      | sscanf
  271      | parse_command
  272      | L_STRING
  273      | L_NUMBER
  274      | L_CLOSURE
  275      | L_SYMBOL
  276      | L_FLOAT
  277      | '(' note_start comma_expr ')'
  278      | '(' '{' note_start expr_list '}' ')'
  279      | L_QUOTED_AGGREGATE note_start expr_list '}' ')'

  280 $@37: %empty

  281 expr4: '(' '[' ':' note_start $@37 expr0 ']' ')'
  282      | '(' '[' note_start m_expr_list ']' ')'
  283      | '(' '<' note_start '>' ')'
  284      | '(' '<' note_start error ')'

  285 @38: %empty

  286 expr4: '(' '<' identifier '>' @38 note_start opt_struct_init ')'
  287      | L_IDENTIFIER
  288      | L_LOCAL
  289      | expr4 L_ARROW struct_member_name
  290      | expr4 index_expr
  291      | expr4 index_range
  292      | expr4 '[' expr0 ',' expr0 ']'

  293 name_lvalue: L_IDENTIFIER
  294            | L_LOCAL

  295 lvalue: name_lvalue
  296       | expr4 index_expr
  297       | expr4 '[' expr0 ',' expr0 ']'
  298       | expr4 index_range
  299       | expr4 L_ARROW struct_member_name
  300       | L_DUMMY

  301 name_var_lvalue: name_lvalue

  302 local_name_lvalue: basic_type L_IDENTIFIER
  303                  | basic_type L_LOCAL

  304 index_expr: '[' expr0 ']'
  305           | '[' '<' expr0 ']'
  306           | '[' '>' expr0 ']'

  307 index_range: '[' L_RANGE expr0 ']'
  308            | '[' L_RANGE '<' expr0 ']'
  309            | '[' L_RANGE '>' expr0 ']'
  310            | '[' expr0 L_RANGE expr0 ']'
  311            | '[' expr0 L_RANGE '<' expr0 ']'
  312            | '[' '<' expr0 L_RANGE expr0 ']'
  313            | '[' '<' expr0 L_RANGE '<' expr0 ']'
  314            | '[' expr0 L_RANGE '>' expr0 ']'
  315            | '[' '>' expr0 L_RANGE expr0 ']'
  316            | '[' '<' expr0 L_RANGE '>' expr0 ']'
  317            | '[' '>' expr0 L_RANGE '<' expr0 ']'
  318            | '[' '>' expr0 L_RANGE '>' expr0 ']'
  319            | '[' expr0 L_RANGE ']'
  320            | '[' '<' expr0 L_RANGE ']'
  321            | '[' '>' expr0 L_RANGE ']'

  322 expr_list: %empty
  323          | expr_list2
  324          | expr_list2 ','

  325 expr_list2: expr0
  326           | expr_list2 ',' expr0

  327 arg_expr_list: %empty
  328              | arg_expr_list2

  329 arg_expr_list2: expr0
  330               | expr0 L_ELLIPSIS
  331               | arg_expr_list2 ',' expr0
  332               | arg_expr_list2 ',' expr0 L_ELLIPSIS

  333 m_expr_list: %empty
  334            | m_expr_list2
  335            | m_expr_list2 ','
  336            | expr_list2
  337            | expr_list2 ','

  338 m_expr_list2: expr0 m_expr_values
  339             | m_expr_list2 ',' expr0 m_expr_values

  340 m_expr_values: ':' expr0
  341              | m_expr_values ';' expr0

  342 struct_member_name: identifier
  343                   | L_STRING L_STRING
  344                   | L_STRING
  345                   | '(' expr0 ')'

  346 opt_struct_init: %empty
  347                | opt_struct_init2 possible_comma
  348                | opt_struct_init2 ',' error

  349 possible_comma: %empty
  350               | ','

  351 opt_struct_init2: struct_init
  352                 | opt_struct_init2 ',' struct_init

  353 struct_init: identifier ':' expr0
  354            | expr0

  355 @39: %empty

  356 function_call: function_name @39 '(' arg_expr_list ')'

  357 @40: %empty

  358 function_call: expr4 L_ARROW call_other_name @40 '(' arg_expr_list ')'

  359 call_other_name: identifier
  360                | L_STRING L_STRING
  361                | L_STRING
  362                | '(' expr0 ')'

  363 function_name: L_IDENTIFIER
  364              | L_LOCAL
  365              | L_COLON_COLON L_IDENTIFIER
  366              | L_COLON_COLON L_LOCAL
  367              | anchestor L_COLON_COLON L_IDENTIFIER
  368              | anchestor L_COLON_COLON L_LOCAL

  369 anchestor: L_IDENTIFIER
  370          | L_STRING L_STRING
  371          | L_STRING

  372 @41: %empty

  373 catch: L_CATCH @41 '(' comma_expr note_start opt_catch_mods ')'

  374 opt_catch_mods: ';' opt_catch_mod_list
  375               | %empty

  376 opt_catch_mod_list: opt_catch_mod_list ',' opt_catch_modifier
  377                   | opt_catch_modifier

  378 opt_catch_modifier: identifier
  379                   | identifier expr0

  380 sscanf: L_SSCANF note_start '(' expr0 ',' expr0 lvalue_list ')'

  381 parse_command: L_PARSE_COMMAND note_start '(' expr0 ',' expr0 ',' expr0 lvalue_list ')'

  382 lvalue_list: %empty
  383            | lvalue_list ',' lvalue


Terminals, with rules where they appear

$end (0) 0
'%' (37) 208 249
'&' (38) 195 235 262 263 264
'(' (40) 9 24 41 92 93 144 147 152 166 177 188 210 219 263 264 277
    278 281 282 283 284 286 345 356 358 362 373 380 381
')' (41) 9 24 41 92 93 144 147 152 166 177 188 210 219 263 264 277
    278 279 281 282 283 284 286 345 356 358 362 373 380 381
'*' (42) 58 88 207 248
'+' (43) 205 216 218 246
',' (44) 48 100 106 108 121 122 124 126 157 168 222 292 297 324 326
    331 332 335 337 339 348 350 352 376 380 381 383
'-' (45) 206 211 247 256
'/' (47) 209 250
':' (58) 28 173 183 184 187 228 281 340 353
';' (59) 5 10 16 30 33 37 39 46 49 56 113 127 128 135 137 138 139 147
    152 341 374
'<' (60) 89 200 240 283 284 286 305 308 311 312 313 316 317 320
'>' (62) 89 198 238 283 286 306 309 314 315 316 317 318 321
'?' (63) 228
'[' (91) 281 282 292 297 304 305 306 307 308 309 310 311 312 313 314
    315 316 317 318 319 320 321
']' (93) 281 282 292 297 304 305 306 307 308 309 310 311 312 313 314
    315 316 317 318 319 320 321
'^' (94) 194 234
'{' (123) 39 93 109 177 278
'|' (124) 77 193 233
'}' (125) 39 93 109 177 278 279
'~' (126) 213 255
error (256) 128 225 284 348
L_ASSIGN (258) 105 108 118 120 124 126 159 224 225 260
L_ARROW (259) 289 299 358
L_BREAK (260) 138
L_CASE (261) 183 184
L_CATCH (262) 373
L_CLOSURE (263) 274
L_CLOSURE_DECL (264) 82
L_COLON_COLON (265) 365 366 367 368
L_CONTINUE (266) 139
L_DEC (267) 258 266
L_DEFAULT (268) 56 187
L_DO (269) 147
L_DUMMY (270) 300
L_ELLIPSIS (271) 330 332
L_ELSE (272) 192
L_EQ (273) 196 236
L_FUNC (274) 20
L_BEGIN_INLINE (275) 22
L_END_INLINE (276) 22
L_FLOAT (277) 276
L_FLOAT_DECL (278) 84
L_FOR (279) 152
L_FOREACH (280) 166
L_GE (281) 199 239
L_IDENTIFIER (282) 9 37 39 41 47 48 55 94 101 103 105 106 108 115 118
    121 124 287 293 302 363 365 367 369
L_IF (283) 188
L_INC (284) 257 265
L_INHERIT (285) 49
L_INLINE_FUN (286)
L_INT (287) 79
L_LAND (288) 232
L_LE (289) 201 241
L_LOCAL (290) 95 102 116 120 122 126 288 294 303 364 366 368
L_LOR (291) 230
L_LSH (292) 202 242
L_MAPPING (293) 85
L_MIXED (294) 86
L_NE (295) 197 237
L_NO_MASK (296) 63
L_NOSAVE (297) 69
L_DEPRECATED (298) 70
L_NOT (299) 212 254
L_NUMBER (300) 214 273
L_OBJECT (301) 81
L_PARSE_COMMAND (302) 381
L_PRIVATE (303) 65
L_PROTECTED (304) 68
L_PUBLIC (305) 66
L_QUOTED_AGGREGATE (306) 279
L_RANGE (307) 175 184 307 308 309 310 311 312 313 314 315 316 317 318
    319 320 321
L_RETURN (308) 140 141
L_RSH (309) 203 243
L_RSHL (310) 204 244
L_SSCANF (311) 380
L_STATIC (312) 64
L_STATUS (313) 78
L_STRING (314) 215 216 217 218 272 343 344 360 361 370 371
L_STRING_DECL (315) 80
L_STRUCT (316) 37 39 87
L_SWITCH (317) 177
L_SYMBOL (318) 275
L_SYMBOL_DECL (319) 83
L_VARARGS (320) 67
L_VIRTUAL (321) 52
L_VISIBLE (322) 71
L_VOID (323) 91 97
L_WHILE (324) 144 147
LOWER_THAN_ELSE (325)


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
all (93)
    on left: 1, on right: 0
program (94)
    on left: 2 3, on right: 1 2
possible_semi_colon (95)
    on left: 4 5, on right: 2
note_start (96)
    on left: 6, on right: 277 278 279 281 282 283 284 286 373 380 381
def (97)
    on left: 9 10 11 12 13, on right: 2
$@1 (98)
    on left: 7, on right: 9
$@2 (99)
    on left: 8, on right: 9
function_body (100)
    on left: 15 16, on right: 9
@3 (101)
    on left: 14, on right: 15
inline_func (102)
    on left: 20 22, on right: 268
$@4 (103)
    on left: 17, on right: 20
$@5 (104)
    on left: 18, on right: 20
$@6 (105)
    on left: 19, on right: 20
$@7 (106)
    on left: 21, on right: 22
inline_opt_args (107)
    on left: 23 24, on right: 20
inline_opt_type (108)
    on left: 25 26, on right: 20
inline_opt_context (109)
    on left: 27 28, on right: 20
inline_semi (110)
    on left: 29 30, on right: 28
inline_context_list (111)
    on left: 31 32 33, on right: 28 33
context_decl (112)
    on left: 34, on right: 32 33
inline_comma_expr (113)
    on left: 35 36, on right: 22
struct_decl (114)
    on left: 37 39, on right: 11
$@8 (115)
    on left: 38, on right: 39
opt_base_struct (116)
    on left: 40 41, on right: 39
opt_member_list (117)
    on left: 42 43, on right: 39
member_list (118)
    on left: 44 45, on right: 43 45
member (119)
    on left: 46, on right: 44 45
member_name_list (120)
    on left: 47 48, on right: 46 48
inheritance (121)
    on left: 49, on right: 12
inheritance_qualifiers (122)
    on left: 50 51, on right: 49 51 56
inheritance_modifier (123)
    on left: 52, on right: 54
inheritance_modifier_list (124)
    on left: 53 54, on right: 50 54
inheritance_qualifier (125)
    on left: 55, on right: 51
default_visibility (126)
    on left: 56, on right: 13
optional_stars (127)
    on left: 57 58, on right: 48 58 106 108 121 122 124 126
type (128)
    on left: 59, on right: 9 55 103 105
non_void_type (129)
    on left: 60, on right: 101 102
type_modifier_list (130)
    on left: 61 62, on right: 37 39 53 54 59 60 62
type_modifier (131)
    on left: 63 64 65 66 67 68 69 70 71, on right: 62
opt_basic_type (132)
    on left: 72 73, on right: 59
opt_basic_non_void_type (133)
    on left: 74 75, on right: 60
basic_non_void_type (134)
    on left: 76 77, on right: 47 74 77 89 90
single_basic_non_void_type (135)
    on left: 78 79 80 81 82 83 84 85 86 87 88 89, on right: 76 77 88
    92
basic_type (136)
    on left: 90 91, on right: 26 72 93 115 116 118 120 302 303
cast (137)
    on left: 92, on right: 252
decl_cast (138)
    on left: 93, on right: 251
identifier (139)
    on left: 94 95, on right: 87 172 286 342 353 359 378 379
argument (140)
    on left: 96 97 98, on right: 9 24
argument_list (141)
    on left: 99 100, on right: 98 100
new_arg_name (142)
    on left: 101 102, on right: 99 100
name_list (143)
    on left: 103 105 106 108, on right: 10 106 108
@9 (144)
    on left: 104, on right: 105
@10 (145)
    on left: 107, on right: 108
block (146)
    on left: 109, on right: 15 20 136
statements_block (147)
    on left: 111, on right: 109 180
$@11 (148)
    on left: 110, on right: 111
statements (149)
    on left: 112 113 114, on right: 22 111 113 114
local_name_list (150)
    on left: 115 116 118 120 121 122 124 126, on right: 34 113 121
    122 124 126
@12 (151)
    on left: 117, on right: 118
@13 (152)
    on left: 119, on right: 120
@14 (153)
    on left: 123, on right: 124
@15 (154)
    on left: 125, on right: 126
statement (155)
    on left: 127 128 129 130 131 132 133 134 135 136 137 138 139, on right:
    114 144 147 152 166 189 192
return (156)
    on left: 140 141, on right: 135
while (157)
    on left: 144, on right: 130
@16 (158)
    on left: 142, on right: 144
@17 (159)
    on left: 143, on right: 144
do (160)
    on left: 147, on right: 131
@18 (161)
    on left: 145, on right: 147
$@19 (162)
    on left: 146, on right: 147
for (163)
    on left: 152, on right: 132
@20 (164)
    on left: 148, on right: 152
@21 (165)
    on left: 149, on right: 152
@22 (166)
    on left: 150, on right: 152
@23 (167)
    on left: 151, on right: 152
for_init_expr (168)
    on left: 153 154, on right: 152
comma_expr_decl (169)
    on left: 155 157, on right: 154 157
$@24 (170)
    on left: 156, on right: 157
expr_decl (171)
    on left: 158 159 160, on right: 155 157
for_expr (172)
    on left: 161 162, on right: 152
foreach (173)
    on left: 166, on right: 133
@25 (174)
    on left: 163, on right: 166
@26 (175)
    on left: 164, on right: 166
$@27 (176)
    on left: 165, on right: 166
foreach_vars (177)
    on left: 167 168, on right: 166 168
foreach_var_decl (178)
    on left: 169, on right: 167 168
foreach_var_lvalue (179)
    on left: 170 171, on right: 169
foreach_in (180)
    on left: 172 173, on right: 166
foreach_expr (181)
    on left: 174 175, on right: 166
switch (182)
    on left: 177, on right: 134
$@28 (183)
    on left: 176, on right: 177
switch_block (184)
    on left: 178 179, on right: 177 178
switch_statements (185)
    on left: 180, on right: 178 179
switch_label (186)
    on left: 181 182, on right: 180
case (187)
    on left: 183 184, on right: 181
case_label (188)
    on left: 185 186, on right: 183 184
default (189)
    on left: 187, on right: 182
condStart (190)
    on left: 188, on right: 189
cond (191)
    on left: 189, on right: 129
optional_else (192)
    on left: 190 192, on right: 189
@29 (193)
    on left: 191, on right: 192
constant (194)
    on left: 193 194 195 196 197 198 199 200 201 202 203 204 205 206
    207 208 209 210 211 212 213 214, on right: 185 193 194 195 196
    197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212
    213
string_constant (195)
    on left: 215 216 217 218 219, on right: 49 186 216 218 219
comma_expr (196)
    on left: 220 222, on right: 36 127 141 144 147 162 177 188 222
    277 373
$@30 (197)
    on left: 221, on right: 222
expr0 (198)
    on left: 224 225 228 230 232 233 234 235 236 237 238 239 240 241
    242 243 244 246 247 248 249 250 251 252 253 254 255 256 257 258
    259 260 261, on right: 105 108 118 120 124 126 158 159 174 175
    220 222 224 225 228 230 232 233 234 235 236 237 238 239 240 241
    242 243 244 246 247 248 249 250 251 252 254 255 256 260 281 292
    297 304 305 306 307 308 309 310 311 312 313 314 315 316 317 318
    319 320 321 325 326 329 330 331 332 338 339 340 341 345 353 354
    362 379 380 381
@31 (199)
    on left: 223, on right: 224
@32 (200)
    on left: 226, on right: 228
@33 (201)
    on left: 227, on right: 228
@34 (202)
    on left: 229, on right: 230
@35 (203)
    on left: 231, on right: 232
@36 (204)
    on left: 245, on right: 246
lvalue_reference (205)
    on left: 262 263 264, on right: 259 260
pre_inc_dec (206)
    on left: 265 266, on right: 253
expr4 (207)
    on left: 267 268 269 270 271 272 273 274 275 276 277 278 279 281
    282 283 284 286 287 288 289 290 291 292, on right: 261 289 290
    291 292 296 297 298 299 358
$@37 (208)
    on left: 280, on right: 281
@38 (209)
    on left: 285, on right: 286
name_lvalue (210)
    on left: 293 294, on right: 262 295 301
lvalue (211)
    on left: 295 296 297 298 299 300, on right: 224 253 257 258 263
    383
name_var_lvalue (212)
    on left: 301, on right: 171
local_name_lvalue (213)
    on left: 302 303, on right: 159 160 170
index_expr (214)
    on left: 304 305 306, on right: 290 296
index_range (215)
    on left: 307 308 309 310 311 312 313 314 315 316 317 318 319 320
    321, on right: 291 298
expr_list (216)
    on left: 322 323 324, on right: 278 279
expr_list2 (217)
    on left: 325 326, on right: 323 324 326 336 337
arg_expr_list (218)
    on left: 327 328, on right: 356 358
arg_expr_list2 (219)
    on left: 329 330 331 332, on right: 328 331 332
m_expr_list (220)
    on left: 333 334 335 336 337, on right: 282
m_expr_list2 (221)
    on left: 338 339, on right: 334 335 339
m_expr_values (222)
    on left: 340 341, on right: 338 339 341
struct_member_name (223)
    on left: 342 343 344 345, on right: 289 299
opt_struct_init (224)
    on left: 346 347 348, on right: 286
possible_comma (225)
    on left: 349 350, on right: 347
opt_struct_init2 (226)
    on left: 351 352, on right: 347 348 352
struct_init (227)
    on left: 353 354, on right: 351 352
function_call (228)
    on left: 356 358, on right: 264 267
@39 (229)
    on left: 355, on right: 356
@40 (230)
    on left: 357, on right: 358
call_other_name (231)
    on left: 359 360 361 362, on right: 358
function_name (232)
    on left: 363 364 365 366 367 368, on right: 356
anchestor (233)
    on left: 369 370 371, on right: 367 368
catch (234)
    on left: 373, on right: 269
@41 (235)
    on left: 372, on right: 373
opt_catch_mods (236)
    on left: 374 375, on right: 373
opt_catch_mod_list (237)
    on left: 376 377, on right: 374 376
opt_catch_modifier (238)
    on left: 378 379, on right: 376 377
sscanf (239)
    on left: 380, on right: 270
parse_command (240)
    on left: 381, on right: 271
lvalue_list (241)
    on left: 382 383, on right: 380 381 383


State 0

    0 $accept: . all $end

    $default  reduce using rule 3 (program)

    all      go to state 1
    program  go to state 2


State 1

    0 $accept: all . $end

    $end  shift, and go to state 3


State 2

    1 all: program .
    2 program: program . def possible_semi_colon

    L_DEFAULT  shift, and go to state 4

    $end      reduce using rule 1 (all)
    $default  reduce using rule 61 (type_modifier_list)

    def                        go to state 5
    struct_decl                go to state 6
    inheritance                go to state 7
    inheritance_qualifiers     go to state 8
    inheritance_modifier_list  go to state 9
    inheritance_qualifier      go to state 10
    default_visibility         go to state 11
    type                       go to state 12
    type_modifier_list         go to state 13
    name_list                  go to state 14


State 3

    0 $accept: all $end .

    $default  accept


State 4

   56 default_visibility: L_DEFAULT . inheritance_qualifiers ';'

    $default  reduce using rule 61 (type_modifier_list)

    inheritance_qualifiers     go to state 15
    inheritance_modifier_list  go to state 9
    inheritance_qualifier      go to state 10
    type                       go to state 16
    type_modifier_list         go to state 17


State 5

    2 program: program def . possible_semi_colon

    ';'  shift, and go to state 18

    $default  reduce using rule 4 (possible_semi_colon)

    possible_semi_colon  go to state 19


State 6

   11 def: struct_decl .

    $default  reduce using rule 11 (def)


State 7

   12 def: inheritance .

    $default  reduce using rule 12 (def)


State 8

   49 inheritance: inheritance_qualifiers . L_INHERIT string_constant ';'

    L_INHERIT  shift, and go to state 20


State 9

   50 inheritance_qualifiers: inheritance_modifier_list .
   54 inheritance_modifier_list: inheritance_modifier_list . inheritance_modifier type_modifier_list

    L_VIRTUAL  shift, and go to state 21

    $default  reduce using rule 50 (inheritance_qualifiers)

    inheritance_modifier  go to state 22


State 10

   51 inheritance_qualifiers: inheritance_qualifier . inheritance_qualifiers

    $default  reduce using rule 61 (type_modifier_list)

    inheritance_qualifiers     go to state 23
    inheritance_modifier_list  go to state 9
    inheritance_qualifier      go to state 10
    type                       go to state 16
    type_modifier_list         go to state 17


State 11

   13 def: default_visibility .

    $default  reduce using rule 13 (def)


State 12

    9 def: type . L_IDENTIFIER $@1 '(' argument ')' $@2 function_body
   55 inheritance_qualifier: type . L_IDENTIFIER
  103 name_list: type . L_IDENTIFIER
  105          | type . L_IDENTIFIER @9 L_ASSIGN expr0

    L_IDENTIFIER  shift, and go to state 24


State 13

   37 struct_decl: type_modifier_list . L_STRUCT L_IDENTIFIER ';'
   39            | type_modifier_list . L_STRUCT L_IDENTIFIER $@8 opt_base_struct '{' opt_member_list '}' ';'
   53 inheritance_modifier_list: type_modifier_list .
   59 type: type_modifier_list . opt_basic_type
   62 type_modifier_list: type_modifier_list . type_modifier

    L_CLOSURE_DECL  shift, and go to state 25
    L_FLOAT_DECL    shift, and go to state 26
    L_INT           shift, and go to state 27
    L_MAPPING       shift, and go to state 28
    L_MIXED         shift, and go to state 29
    L_NO_MASK       shift, and go to state 30
    L_NOSAVE        shift, and go to state 31
    L_DEPRECATED    shift, and go to state 32
    L_OBJECT        shift, and go to state 33
    L_PRIVATE       shift, and go to state 34
    L_PROTECTED     shift, and go to state 35
    L_PUBLIC        shift, and go to state 36
    L_STATIC        shift, and go to state 37
    L_STATUS        shift, and go to state 38
    L_STRING_DECL   shift, and go to state 39
    L_STRUCT        shift, and go to state 40
    L_SYMBOL_DECL   shift, and go to state 41
    L_VARARGS       shift, and go to state 42
    L_VISIBLE       shift, and go to state 43
    L_VOID          shift, and go to state 44
    '<'             shift, and go to state 45

    L_IDENTIFIER  reduce using rule 73 (opt_basic_type)
    $default      reduce using rule 53 (inheritance_modifier_list)

    type_modifier               go to state 46
    opt_basic_type              go to state 47
    basic_non_void_type         go to state 48
    single_basic_non_void_type  go to state 49
    basic_type                  go to state 50


State 14

   10 def: name_list . ';'
  106 name_list: name_list . ',' optional_stars L_IDENTIFIER
  108          | name_list . ',' optional_stars L_IDENTIFIER @10 L_ASSIGN expr0

    ';'  shift, and go to state 51
    ','  shift, and go to state 52


State 15

   56 default_visibility: L_DEFAULT inheritance_qualifiers . ';'

    ';'  shift, and go to state 53


State 16

   55 inheritance_qualifier: type . L_IDENTIFIER

    L_IDENTIFIER  shift, and go to state 54


State 17

   53 inheritance_modifier_list: type_modifier_list .
   59 type: type_modifier_list . opt_basic_type
   62 type_modifier_list: type_modifier_list . type_modifier
